docs/api/qiskit/0.24/qiskit.quantum_info.SparsePauliOp.md
---
title: SparsePauliOp
description: API reference for qiskit.quantum_info.SparsePauliOp
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.SparsePauliOp
---

<span id="qiskit-quantum-info-sparsepauliop" />

# qiskit.quantum\_info.SparsePauliOp

<span id="qiskit.quantum_info.SparsePauliOp" />

`SparsePauliOp(data, coeffs=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/quantum_info/operators/symplectic/sparse_pauli_op.py "view source code")

Sparse N-qubit operator in a Pauli basis representation.

This is a sparse representation of an N-qubit matrix [`Operator`](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator") in terms of N-qubit [`PauliTable`](qiskit.quantum_info.PauliTable "qiskit.quantum_info.PauliTable") and complex coefficients.

It can be used for performing operator arithmetic for hundred of qubits if the number of non-zero Pauli basis terms is sufficiently small.

The Pauli basis components are stored as a [`PauliTable`](qiskit.quantum_info.PauliTable "qiskit.quantum_info.PauliTable") object and can be accessed using the [`table`](#qiskit.quantum_info.SparsePauliOp.table "qiskit.quantum_info.SparsePauliOp.table") attribute. The coefficients are stored as a complex Numpy array vector and can be accessed using the [`coeffs`](#qiskit.quantum_info.SparsePauliOp.coeffs "qiskit.quantum_info.SparsePauliOp.coeffs") attribute.

Initialize an operator object.

**Parameters**

*   **data** ([*PauliTable*](qiskit.quantum_info.PauliTable "qiskit.quantum_info.PauliTable")) – Pauli table of terms.
*   **coeffs** (*np.ndarray*) – complex coefficients for Pauli terms.

**Raises**

**QiskitError** – If the input data or coeffs are invalid.

### \_\_init\_\_

<span id="qiskit.quantum_info.SparsePauliOp.__init__" />

`__init__(data, coeffs=None)`

Initialize an operator object.

**Parameters**

*   **data** ([*PauliTable*](qiskit.quantum_info.PauliTable "qiskit.quantum_info.PauliTable")) – Pauli table of terms.
*   **coeffs** (*np.ndarray*) – complex coefficients for Pauli terms.

**Raises**

**QiskitError** – If the input data or coeffs are invalid.

## Methods

|                                                                                                                                           |                                                                            |
| ----------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------- |
| [`__init__`](#qiskit.quantum_info.SparsePauliOp.__init__ "qiskit.quantum_info.SparsePauliOp.__init__")(data\[, coeffs])                   | Initialize an operator object.                                             |
| [`add`](#qiskit.quantum_info.SparsePauliOp.add "qiskit.quantum_info.SparsePauliOp.add")(other)                                            | Return the linear operator self + other.                                   |
| [`adjoint`](#qiskit.quantum_info.SparsePauliOp.adjoint "qiskit.quantum_info.SparsePauliOp.adjoint")()                                     | Return the adjoint of the operator.                                        |
| [`compose`](#qiskit.quantum_info.SparsePauliOp.compose "qiskit.quantum_info.SparsePauliOp.compose")(other\[, qargs, front])               | Return the composition channel self∘other.                                 |
| [`conjugate`](#qiskit.quantum_info.SparsePauliOp.conjugate "qiskit.quantum_info.SparsePauliOp.conjugate")()                               | Return the conjugate of the operator.                                      |
| [`copy`](#qiskit.quantum_info.SparsePauliOp.copy "qiskit.quantum_info.SparsePauliOp.copy")()                                              | Make a deep copy of current operator.                                      |
| [`dot`](#qiskit.quantum_info.SparsePauliOp.dot "qiskit.quantum_info.SparsePauliOp.dot")(other\[, qargs])                                  | Return the composition channel self∘other.                                 |
| [`expand`](#qiskit.quantum_info.SparsePauliOp.expand "qiskit.quantum_info.SparsePauliOp.expand")(other)                                   | Return the tensor product operator other ⊗ self.                           |
| [`from_list`](#qiskit.quantum_info.SparsePauliOp.from_list "qiskit.quantum_info.SparsePauliOp.from_list")(obj)                            | Construct from a list \[(pauli\_str, coeffs)]                              |
| [`from_operator`](#qiskit.quantum_info.SparsePauliOp.from_operator "qiskit.quantum_info.SparsePauliOp.from_operator")(obj\[, atol, rtol]) | Construct from an Operator objector.                                       |
| [`input_dims`](#qiskit.quantum_info.SparsePauliOp.input_dims "qiskit.quantum_info.SparsePauliOp.input_dims")(\[qargs])                    | Return tuple of input dimension for specified subsystems.                  |
| [`is_unitary`](#qiskit.quantum_info.SparsePauliOp.is_unitary "qiskit.quantum_info.SparsePauliOp.is_unitary")(\[atol, rtol])               | Return True if operator is a unitary matrix.                               |
| [`label_iter`](#qiskit.quantum_info.SparsePauliOp.label_iter "qiskit.quantum_info.SparsePauliOp.label_iter")()                            | Return a label representation iterator.                                    |
| [`matrix_iter`](#qiskit.quantum_info.SparsePauliOp.matrix_iter "qiskit.quantum_info.SparsePauliOp.matrix_iter")(\[sparse])                | Return a matrix representation iterator.                                   |
| [`multiply`](#qiskit.quantum_info.SparsePauliOp.multiply "qiskit.quantum_info.SparsePauliOp.multiply")(other)                             | Return the linear operator other \* self.                                  |
| [`output_dims`](#qiskit.quantum_info.SparsePauliOp.output_dims "qiskit.quantum_info.SparsePauliOp.output_dims")(\[qargs])                 | Return tuple of output dimension for specified subsystems.                 |
| [`power`](#qiskit.quantum_info.SparsePauliOp.power "qiskit.quantum_info.SparsePauliOp.power")(n)                                          | Return the compose of a operator with itself n times.                      |
| [`reshape`](#qiskit.quantum_info.SparsePauliOp.reshape "qiskit.quantum_info.SparsePauliOp.reshape")(\[input\_dims, output\_dims])         | Return a shallow copy with reshaped input and output subsystem dimensions. |
| [`set_atol`](#qiskit.quantum_info.SparsePauliOp.set_atol "qiskit.quantum_info.SparsePauliOp.set_atol")(value)                             | Set the class default absolute tolerance parameter for float comparisons.  |
| [`set_rtol`](#qiskit.quantum_info.SparsePauliOp.set_rtol "qiskit.quantum_info.SparsePauliOp.set_rtol")(value)                             | Set the class default relative tolerance parameter for float comparisons.  |
| [`simplify`](#qiskit.quantum_info.SparsePauliOp.simplify "qiskit.quantum_info.SparsePauliOp.simplify")(\[atol, rtol])                     | Simplify PauliTable by combining duplicaties and removing zeros.           |
| [`subtract`](#qiskit.quantum_info.SparsePauliOp.subtract "qiskit.quantum_info.SparsePauliOp.subtract")(other)                             | Return the linear operator self - other.                                   |
| [`tensor`](#qiskit.quantum_info.SparsePauliOp.tensor "qiskit.quantum_info.SparsePauliOp.tensor")(other)                                   | Return the tensor product operator self ⊗ other.                           |
| [`to_list`](#qiskit.quantum_info.SparsePauliOp.to_list "qiskit.quantum_info.SparsePauliOp.to_list")(\[array])                             | Convert to a list Pauli string labels and coefficients.                    |
| [`to_matrix`](#qiskit.quantum_info.SparsePauliOp.to_matrix "qiskit.quantum_info.SparsePauliOp.to_matrix")(\[sparse])                      | Convert to a dense or sparse matrix.                                       |
| [`to_operator`](#qiskit.quantum_info.SparsePauliOp.to_operator "qiskit.quantum_info.SparsePauliOp.to_operator")()                         | Convert to a matrix Operator object                                        |
| [`transpose`](#qiskit.quantum_info.SparsePauliOp.transpose "qiskit.quantum_info.SparsePauliOp.transpose")()                               | Return the transpose of the operator.                                      |

## Attributes

|                                                                                                              |                                                                      |
| ------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------- |
| [`atol`](#qiskit.quantum_info.SparsePauliOp.atol "qiskit.quantum_info.SparsePauliOp.atol")                   | The default absolute tolerance parameter for float comparisons.      |
| [`coeffs`](#qiskit.quantum_info.SparsePauliOp.coeffs "qiskit.quantum_info.SparsePauliOp.coeffs")             | Return the Pauli coefficients.                                       |
| [`dim`](#qiskit.quantum_info.SparsePauliOp.dim "qiskit.quantum_info.SparsePauliOp.dim")                      | Return tuple (input\_shape, output\_shape).                          |
| [`num_qubits`](#qiskit.quantum_info.SparsePauliOp.num_qubits "qiskit.quantum_info.SparsePauliOp.num_qubits") | Return the number of qubits if a N-qubit operator or None otherwise. |
| [`qargs`](#qiskit.quantum_info.SparsePauliOp.qargs "qiskit.quantum_info.SparsePauliOp.qargs")                | Return the qargs for the operator.                                   |
| [`rtol`](#qiskit.quantum_info.SparsePauliOp.rtol "qiskit.quantum_info.SparsePauliOp.rtol")                   | The relative tolerance parameter for float comparisons.              |
| [`size`](#qiskit.quantum_info.SparsePauliOp.size "qiskit.quantum_info.SparsePauliOp.size")                   | The number of Pauli of Pauli terms in the operator.                  |
| [`table`](#qiskit.quantum_info.SparsePauliOp.table "qiskit.quantum_info.SparsePauliOp.table")                | Return the the PauliTable.                                           |

### add

<span id="qiskit.quantum_info.SparsePauliOp.add" />

`add(other)`

Return the linear operator self + other.

DEPRECATED: use `operator + other` instead.

**Parameters**

**other** (*BaseOperator*) – an operator object.

**Returns**

the operator self + other.

**Return type**

BaseOperator

### adjoint

<span id="qiskit.quantum_info.SparsePauliOp.adjoint" />

`adjoint()`

Return the adjoint of the operator.

### atol

<span id="qiskit.quantum_info.SparsePauliOp.atol" />

`property atol`

The default absolute tolerance parameter for float comparisons.

### coeffs

<span id="qiskit.quantum_info.SparsePauliOp.coeffs" />

`property coeffs`

Return the Pauli coefficients.

### compose

<span id="qiskit.quantum_info.SparsePauliOp.compose" />

`compose(other, qargs=None, front=False)`

Return the composition channel self∘other.

**Parameters**

*   **other** ([*SparsePauliOp*](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")) – an operator object.
*   **qargs** (*list or None*) – a list of subsystem positions to compose other on.
*   **front** (*bool or None*) – If False compose in standard order other(self(input)) otherwise compose in reverse order self(other(input)) \[default: False]

**Returns**

The composed operator.

**Return type**

[SparsePauliOp](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")

**Raises**

*   **QiskitError** – if other cannot be converted to an Operator or has
*   **incompatible dimensions.** –

### conjugate

<span id="qiskit.quantum_info.SparsePauliOp.conjugate" />

`conjugate()`

Return the conjugate of the operator.

### copy

<span id="qiskit.quantum_info.SparsePauliOp.copy" />

`copy()`

Make a deep copy of current operator.

### dim

<span id="qiskit.quantum_info.SparsePauliOp.dim" />

`property dim`

Return tuple (input\_shape, output\_shape).

### dot

<span id="qiskit.quantum_info.SparsePauliOp.dot" />

`dot(other, qargs=None)`

Return the composition channel self∘other.

**Parameters**

*   **other** ([*SparsePauliOp*](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")) – an operator object.
*   **qargs** (*list or None*) – a list of subsystem positions to compose other on.

**Returns**

The composed operator.

**Return type**

[SparsePauliOp](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")

**Raises**

*   **QiskitError** – if other cannot be converted to an Operator or has
*   **incompatible dimensions.** –

### expand

<span id="qiskit.quantum_info.SparsePauliOp.expand" />

`expand(other)`

Return the tensor product operator other ⊗ self.

**Parameters**

**other** ([*SparsePauliOp*](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")) – an operator object.

**Returns**

the tensor product operator other ⊗ self.

**Return type**

[SparsePauliOp](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")

**Raises**

**QiskitError** – if other cannot be converted to a SparsePauliOp operator.

### from\_list

<span id="qiskit.quantum_info.SparsePauliOp.from_list" />

`static from_list(obj)`

Construct from a list \[(pauli\_str, coeffs)]

### from\_operator

<span id="qiskit.quantum_info.SparsePauliOp.from_operator" />

`static from_operator(obj, atol=None, rtol=None)`

Construct from an Operator objector.

Note that the cost of this contruction is exponential as it involves taking inner products with every element of the N-qubit Pauli basis.

**Parameters**

*   **obj** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – an N-qubit operator.
*   **atol** (*float*) – Optional. Absolute tolerance for checking if coefficients are zero (Default: 1e-8).
*   **rtol** (*float*) – Optinoal. relative tolerance for checking if coefficients are zero (Default: 1e-5).

**Returns**

the SparsePauliOp representation of the operator.

**Return type**

[SparsePauliOp](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")

**Raises**

**QiskitError** – if the input operator is not an N-qubit operator.

### input\_dims

<span id="qiskit.quantum_info.SparsePauliOp.input_dims" />

`input_dims(qargs=None)`

Return tuple of input dimension for specified subsystems.

### is\_unitary

<span id="qiskit.quantum_info.SparsePauliOp.is_unitary" />

`is_unitary(atol=None, rtol=None)`

Return True if operator is a unitary matrix.

**Parameters**

*   **atol** (*float*) – Optional. Absolute tolerance for checking if coefficients are zero (Default: 1e-8).
*   **rtol** (*float*) – Optinoal. relative tolerance for checking if coefficients are zero (Default: 1e-5).

**Returns**

True if the operator is unitary, False otherwise.

**Return type**

bool

### label\_iter

<span id="qiskit.quantum_info.SparsePauliOp.label_iter" />

`label_iter()`

Return a label representation iterator.

This is a lazy iterator that converts each term in the SparsePauliOp into a tuple (label, coeff). To convert the entire table to labels use the `to_labels()` method.

**Returns**

label iterator object for the PauliTable.

**Return type**

LabelIterator

### matrix\_iter

<span id="qiskit.quantum_info.SparsePauliOp.matrix_iter" />

`matrix_iter(sparse=False)`

Return a matrix representation iterator.

This is a lazy iterator that converts each term in the SparsePauliOp into a matrix as it is used. To convert to a single matrix use the [`to_matrix()`](#qiskit.quantum_info.SparsePauliOp.to_matrix "qiskit.quantum_info.SparsePauliOp.to_matrix") method.

**Parameters**

**sparse** (*bool*) – optionally return sparse CSR matrices if True, otherwise return Numpy array matrices (Default: False)

**Returns**

matrix iterator object for the PauliTable.

**Return type**

MatrixIterator

### multiply

<span id="qiskit.quantum_info.SparsePauliOp.multiply" />

`multiply(other)`

Return the linear operator other \* self.

DEPRECATED: use `other * operator` instead.

**Parameters**

**other** (*complex*) – a complex number.

**Returns**

the linear operator other \* self.

**Return type**

BaseOperator

**Raises**

**NotImplementedError** – if subclass does not support multiplication.

### num\_qubits

<span id="qiskit.quantum_info.SparsePauliOp.num_qubits" />

`property num_qubits`

Return the number of qubits if a N-qubit operator or None otherwise.

### output\_dims

<span id="qiskit.quantum_info.SparsePauliOp.output_dims" />

`output_dims(qargs=None)`

Return tuple of output dimension for specified subsystems.

### power

<span id="qiskit.quantum_info.SparsePauliOp.power" />

`power(n)`

Return the compose of a operator with itself n times.

**Parameters**

**n** (*int*) – the number of times to compose with self (n>0).

**Returns**

the n-times composed operator.

**Return type**

BaseOperator

**Raises**

**QiskitError** – if the input and output dimensions of the operator are not equal, or the power is not a positive integer.

### qargs

<span id="qiskit.quantum_info.SparsePauliOp.qargs" />

`property qargs`

Return the qargs for the operator.

### reshape

<span id="qiskit.quantum_info.SparsePauliOp.reshape" />

`reshape(input_dims=None, output_dims=None)`

Return a shallow copy with reshaped input and output subsystem dimensions.

**Arg:**

**input\_dims (None or tuple): new subsystem input dimensions.**

If None the original input dims will be preserved \[Default: None].

**output\_dims (None or tuple): new subsystem output dimensions.**

If None the original output dims will be preserved \[Default: None].

**Returns**

returns self with reshaped input and output dimensions.

**Return type**

BaseOperator

**Raises**

**QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.

### rtol

<span id="qiskit.quantum_info.SparsePauliOp.rtol" />

`property rtol`

The relative tolerance parameter for float comparisons.

### set\_atol

<span id="qiskit.quantum_info.SparsePauliOp.set_atol" />

`classmethod set_atol(value)`

Set the class default absolute tolerance parameter for float comparisons.

DEPRECATED: use operator.atol = value instead

### set\_rtol

<span id="qiskit.quantum_info.SparsePauliOp.set_rtol" />

`classmethod set_rtol(value)`

Set the class default relative tolerance parameter for float comparisons.

DEPRECATED: use operator.rtol = value instead

### simplify

<span id="qiskit.quantum_info.SparsePauliOp.simplify" />

`simplify(atol=None, rtol=None)`

Simplify PauliTable by combining duplicaties and removing zeros.

**Parameters**

*   **atol** (*float*) – Optional. Absolute tolerance for checking if coefficients are zero (Default: 1e-8).
*   **rtol** (*float*) – Optinoal. relative tolerance for checking if coefficients are zero (Default: 1e-5).

**Returns**

the simplified SparsePauliOp operator.

**Return type**

[SparsePauliOp](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")

### size

<span id="qiskit.quantum_info.SparsePauliOp.size" />

`property size`

The number of Pauli of Pauli terms in the operator.

### subtract

<span id="qiskit.quantum_info.SparsePauliOp.subtract" />

`subtract(other)`

Return the linear operator self - other.

DEPRECATED: use `operator - other` instead.

**Parameters**

**other** (*BaseOperator*) – an operator object.

**Returns**

the operator self - other.

**Return type**

BaseOperator

### table

<span id="qiskit.quantum_info.SparsePauliOp.table" />

`property table`

Return the the PauliTable.

### tensor

<span id="qiskit.quantum_info.SparsePauliOp.tensor" />

`tensor(other)`

Return the tensor product operator self ⊗ other.

**Parameters**

**other** ([*SparsePauliOp*](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")) – a operator subclass object.

**Returns**

the tensor product operator self ⊗ other.

**Return type**

[SparsePauliOp](#qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")

**Raises**

**QiskitError** – if other cannot be converted to a SparsePauliOp operator.

### to\_list

<span id="qiskit.quantum_info.SparsePauliOp.to_list" />

`to_list(array=False)`

Convert to a list Pauli string labels and coefficients.

For operators with a lot of terms converting using the `array=True` kwarg will be more efficient since it allocates memory for the full Numpy array of labels in advance.

**Parameters**

**array** (*bool*) – return a Numpy array if True, otherwise return a list (Default: False).

**Returns**

List of pairs (label, coeff) for rows of the PauliTable.

**Return type**

list or array

### to\_matrix

<span id="qiskit.quantum_info.SparsePauliOp.to_matrix" />

`to_matrix(sparse=False)`

Convert to a dense or sparse matrix.

**Parameters**

**sparse** (*bool*) – if True return a sparse CSR matrix, otherwise return dense Numpy array (Default: False).

**Returns**

A dense matrix if sparse=False. csr\_matrix: A sparse matrix in CSR format if sparse=True.

**Return type**

array

### to\_operator

<span id="qiskit.quantum_info.SparsePauliOp.to_operator" />

`to_operator()`

Convert to a matrix Operator object

### transpose

<span id="qiskit.quantum_info.SparsePauliOp.transpose" />

`transpose()`

Return the transpose of the operator.

